# family-history-research-assistant

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: duplicate-analyzer.md  genealogy-researcher.md  locality-planner.md  narrative-writer.md  proof-writer.md  source-evaluator.md  tree-reconciler.md
_bmad-output/planning-artifacts/: prd.md
_bmad-output/planning-artifacts/research/: market-oss-viability-and-fsi-approval-2026-04-24.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: README.md  backend-api.md  familysearch-compliance.md  project-brief.md
src/fhra/: __init__.py  cli.py  config.py  logging_config.py
src/fhra/api/: __init__.py  client.py
src/fhra/auth/: __init__.py  oauth.py
src/fhra/db/: __init__.py  connection.py  queries.py  schema.sql
src/fhra/gedcom/: __init__.py  importer.py
src/fhra/mcp_server/: __init__.py  server.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_config.py  test_db.py  test_gedcom_importer.py  test_mcp_server.py
